server/error_utf8.log
[dotenv@17.2.3] injecting env (0) from .env -- tip: ≡ƒöÉ encrypt with Dotenvx: https://dotenvx.com
[dotenv@17.2.3] injecting env (0) from .env -- tip: ≡ƒöÉ encrypt with Dotenvx: https://dotenvx.com
node : D:\VTrustX\server\src\api\routes\set
tings.js:96
At line:1 char:1
+ node index.js > error.log 2>&1
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified 
   : (D:\VTrustX\serv...\settings.js:96:S  
  tring) [], RemoteException
    + FullyQualifiedErrorId : NativeComman 
   dError
 
const authenticate = 
require('../middleware/auth');
      ^

SyntaxError: Identifier 'authenticate' has 
already been declared
    at wrapSafe 
(node:internal/modules/cjs/loader:1620:18)
    at Module._compile 
(node:internal/modules/cjs/loader:1662:20)
    at Object..js 
(node:internal/modules/cjs/loader:1820:10)
    at Module.load 
(node:internal/modules/cjs/loader:1423:32)
    at Function._load 
(node:internal/modules/cjs/loader:1246:12)
    at TracingChannel.traceSync 
(node:diagnostics_channel:322:14)
    at wrapModuleLoad 
(node:internal/modules/cjs/loader:235:24)
    at Module.require 
(node:internal/modules/cjs/loader:1445:12)
    at require 
(node:internal/modules/helpers:135:16)
    at Object.<anonymous> 
(D:\VTrustX\server\index.js:20:26)

Node.js v22.18.0
